servicepoint2/sp2-bindings.h

typedef uint16_t sp2_CompressionCode;
/**
 * A vector of bits
 */
typedef struct sp2_BitVec sp2_BitVec;
/**
 * A grid of bytes
 */
typedef struct sp2_ByteGrid sp2_ByteGrid;
/**
 * A command to send to the display.
 */
typedef struct sp2_Command sp2_Command;
/**
 * A connection to the display.
 */
typedef struct sp2_Connection sp2_Connection;
/**
 * A grid of pixels stored in packed bytes.
 */
typedef struct sp2_PixelGrid sp2_PixelGrid;
typedef uint8_t sp2_Brightness;
typedef uint16_t sp2_Offset;
/**
 * Creates a new `BitVec` instance.
 * The returned instance has to be freed with `bit_vec_dealloc`.
 */
struct sp2_BitVec *sp2_bit_vec_new(uintptr_t size);
/**
 * Loads a `BitVec` from the provided data.
 * The returned instance has to be freed with `bit_vec_dealloc`.
 */
struct sp2_BitVec *sp2_bit_vec_load(const uint8_t *data, uintptr_t data_length);
/**
 * Clones a `BitVec`.
 * The returned instance has to be freed with `bit_vec_dealloc`.
 */
struct sp2_BitVec *sp2_bit_vec_clone(const struct sp2_BitVec *this_);
/**
 * Deallocates a `BitVec`.
 *
 * Note: do not call this if the grid has been consumed in another way, e.g. to create a command.
 */
void sp2_bit_vec_dealloc(struct sp2_BitVec *this_);
/**
 * Gets the value of a bit from the `BitVec`.
 */
bool sp2_bit_vec_get(const struct sp2_BitVec *this_, uintptr_t index);
/**
 * Sets the value of a bit in the `BitVec`.
 */
bool sp2_bit_vec_set(struct sp2_BitVec *this_, uintptr_t index, bool value);
/**
 * Sets the value of all bits in the `BitVec`.
 */
void sp2_bit_vec_fill(struct sp2_BitVec *this_, bool value);
/**
 * Gets the length of the `BitVec` in bits.
 */
uintptr_t sp2_bit_vec_len(const struct sp2_BitVec *this_);
/**
 * Creates a new `ByteGrid` instance.
 * The returned instance has to be freed with `byte_grid_dealloc`.
 */
struct sp2_ByteGrid *sp2_byte_grid_new(uintptr_t width, uintptr_t height);
/**
 * Loads a `ByteGrid` with the specified dimensions from the provided data.
 * The returned instance has to be freed with `byte_grid_dealloc`.
 */
struct sp2_ByteGrid *sp2_byte_grid_load(uintptr_t width,
                                        uintptr_t height,
                                        const uint8_t *data,
                                        uintptr_t data_length);
/**
 * Clones a `ByteGrid`.
 * The returned instance has to be freed with `byte_grid_dealloc`.
 */
struct sp2_ByteGrid *sp2_byte_grid_clone(const struct sp2_ByteGrid *this_);
/**
 * Deallocates a `ByteGrid`.
 *
 * Note: do not call this if the grid has been consumed in another way, e.g. to create a command.
 */
void sp2_byte_grid_dealloc(struct sp2_ByteGrid *this_);
/**
 * Get the current value at the specified position
 */
uint8_t sp2_byte_grid_get(const struct sp2_ByteGrid *this_, uintptr_t x, uintptr_t y);
/**
 * Sets the current value at the specified position
 */
void sp2_byte_grid_set(struct sp2_ByteGrid *this_, uintptr_t x, uintptr_t y, uint8_t value);
/**
 * Fills the whole `ByteGrid` with the specified value
 */
void sp2_byte_grid_fill(struct sp2_ByteGrid *this_, uint8_t value);
/**
 * Gets the width in pixels of the `ByteGrid` instance.
 */
uintptr_t sp2_byte_grid_width(const struct sp2_PixelGrid *this_);
/**
 * Gets the height in pixels of the `ByteGrid` instance.
 */
uintptr_t sp2_byte_grid_height(const struct sp2_PixelGrid *this_);
/**
 * Tries to load a `Command` from the passed array with the specified length.
 *
 * returns: NULL in case of an error, pointer to the allocated command otherwise
 */
struct sp2_Command *sp2_command_try_load(const uint8_t *data, uintptr_t length);
/**
 * Clones a `Command` instance
 */
struct sp2_Command *sp2_command_clone(const struct sp2_Command *original);
/**
 * Allocates a new `Command::Clear` instance
 */
struct sp2_Command *sp2_command_clear(void);
/**
 * Allocates a new `Command::HardReset` instance
 */
struct sp2_Command *sp2_command_hard_reset(void);
/**
 * Allocates a new `Command::FadeOut` instance
 */
struct sp2_Command *sp2_command_fade_out(void);
/**
 * Allocates a new `Command::Brightness` instance
 */
struct sp2_Command *sp2_command_brightness(sp2_Brightness brightness);
/**
 * Allocates a new `Command::CharBrightness` instance.
 * The passed `ByteGrid` gets deallocated in the process.
 */
struct sp2_Command *sp2_command_char_brightness(uint16_t x,
                                                uint16_t y,
                                                struct sp2_ByteGrid *byte_grid);
/**
 * Allocates a new `Command::BitmapLinear` instance.
 * The passed `BitVec` gets deallocated in the process.
 */
struct sp2_Command *sp2_command_bitmap_linear(sp2_Offset offset,
                                              struct sp2_BitVec *bit_vec,
                                              sp2_CompressionCode compression);
/**
 * Allocates a new `Command::BitmapLinearAnd` instance.
 * The passed `BitVec` gets deallocated in the process.
 */
struct sp2_Command *sp2_command_bitmap_linear_and(sp2_Offset offset,
                                                  struct sp2_BitVec *bit_vec,
                                                  sp2_CompressionCode compression);
/**
 * Allocates a new `Command::BitmapLinearOr` instance.
 * The passed `BitVec` gets deallocated in the process.
 */
struct sp2_Command *sp2_command_bitmap_linear_or(sp2_Offset offset,
                                                 struct sp2_BitVec *bit_vec,
                                                 sp2_CompressionCode compression);
/**
 * Allocates a new `Command::BitmapLinearXor` instance.
 * The passed `BitVec` gets deallocated in the process.
 */
struct sp2_Command *sp2_command_bitmap_linear_xor(sp2_Offset offset,
                                                  struct sp2_BitVec *bit_vec,
                                                  sp2_CompressionCode compression);
/**
 * Allocates a new `Command::Cp437Data` instance.
 * The passed `ByteGrid` gets deallocated in the process.
 */
struct sp2_Command *sp2_command_cp437_data(uint16_t x, uint16_t y, struct sp2_ByteGrid *byte_grid);
/**
 * Allocates a new `Command::BitmapLinearWin` instance.
 * The passed `PixelGrid` gets deallocated in the process.
 */
struct sp2_Command *sp2_command_bitmap_linear_win(uint16_t x,
                                                  uint16_t y,
                                                  struct sp2_PixelGrid *byte_grid);
/**
 * Deallocates a `Command`. Note that connection_send does this implicitly, so you only need
 * to do this if you use the library for parsing commands.
 */
void sp2_command_dealloc(struct sp2_Command *ptr);
/**
 * Creates a new instance of Connection.
 * The returned instance has to be deallocated with `connection_dealloc`.
 *
 * returns: NULL if connection fails or connected instance
 *
 * Panics: bad string encoding
 */
struct sp2_Connection *sp2_connection_open(const char *host);
/**
 * Sends the command instance. The instance is consumed / destroyed and cannot be used after this call.
 */
bool sp2_connection_send(const struct sp2_Connection *connection,
                         struct sp2_Command *command_ptr);